--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_URL=https://lap3000.fando.id/graphql
-NEXT_PUBLIC_UPLOAD_URL=https://lap3000.fando.id
+NEXT_PUBLIC_UPLOAD_URL=https://lap3000.fando.id/upload
