--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-  "start": "next start -p 3001",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
+    "@types/leaflet": "^1.9.20",
     "@types/react-datepicker": "^7.0.0",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
@@ -31,6 +32,7 @@
     "flatpickr": "^4.6.13",
     "graphql": "^16.11.0",
     "graphql-request": "^7.1.2",
+    "leaflet": "^1.9.4",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -40,6 +42,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0"
   },
