--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
     "swiper": "^11.2.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
